--- a/foundry.toml
+++ b/foundry.toml
@@ -8,5 +8,12 @@ remappings = [
     '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts',
 ]
 
+# [fuzz]
+# runs = 1000
+
+[invariant]
+runs = 128
+depth = 128
+fail_on_revert = true
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
